--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,18 +28,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Universitas.jar
+dist.jar=${dist.dir}/ClassSchedule.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Universitas
+dist.jlink.output=${dist.jlink.dir}/ClassSchedule
 excludes=
-file.reference.jcalendar-1.4.jar=../../../Downloads/jcalendar-1.4/lib/jcalendar-1.4.jar
-file.reference.mysql-connector-java-8.0.30.jar=..\\..\\..\\Desktop\\mysql-connector-java-8.0.30.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Universitas
-main.class=View.SignUpJFrame
+jlink.launcher.name=ClassSchedule
+main.class=View.ClassSchedule
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
