--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/exam_schedule
 excludes=
 file.reference.JPlanner.jar=C:\\Users\\nwjsh\\OneDrive\\Desktop\\ScheduleApplication\\lib\\JPlanner.jar
+file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\nwjsh\\OneDrive\\Desktop\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JCalender.classpath}:\
-    ${file.reference.JPlanner.jar}
+    ${file.reference.JPlanner.jar}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
