--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/userlogin.jar
+dist.jar=${dist.dir}/universitas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/userlogin
+dist.jlink.output=${dist.jlink.dir}/universitas
 excludes=
 file.reference.-mysql-connector-j-8.0.31=D:\\mysql-connector-j-8.0.31
 file.reference.mysql-connector-j-8.0.31.jar=D:\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
@@ -76,7 +76,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=userlogin
+jlink.launcher.name=universitas
 main.class=Database.DbConnection
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
