--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
+file.reference.JPlanner.jar=C:\\Users\\nwjsh\\OneDrive\\Documents\\NetBeansProjects
+file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\nwjsh\\OneDrive\\Documents\\NetBeansProjects
 user.properties.file=C:\\Users\\nwjsh\\AppData\\Roaming\\NetBeans\\15\\build.properties
