--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/universitass
 excludes=
+file.reference.-mysql-connector-j-8.0.31=D:\\mysql-connector-j-8.0.31
 file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\nwjsh\\OneDrive\\Desktop\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.31.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
+    ${file.reference.-mysql-connector-j-8.0.31}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
