--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ViewClubDetails.jar
+dist.jar=${dist.dir}/ViewHostelDetails.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ViewClubDetails
+dist.jlink.output=${dist.jlink.dir}/ViewHostelDetails
 excludes=
 file.reference.mysql-connector-java-8.0.30.jar=..\\..\\..\\Desktop\\mysql-connector-java-8.0.30.jar
 includes=**
@@ -72,8 +72,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ViewClubDetails
-main.class=View.ViewClubFrame
+jlink.launcher.name=ViewHostelDetails
+main.class=View.ViewHostelFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
